--- a/package.json
+++ b/package.json
@@ -9,26 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "fathom-client": "^3.4.1",
-    "framer-motion": "^6.3.3",
-    "next": "^12.1.6",
-    "next-seo": "^4.29.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "sass": "^1.49.7"
+    "@radix-ui/react-switch": "^1.0.3",
+    "framer-motion": "^10.9.1",
+    "next": "^13.2.4",
+    "next-seo": "^5.15.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/gtag.js": "^0.0.8",
-    "@types/node": "17.0.10",
-    "@types/react": "17.0.38",
-    "autoprefixer": "^10.4.2",
+    "@types/node": "^18.15.9",
+    "@types/react": "^18.0.29",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "eslint-config-prettier": "^8.3.0",
-    "next-sitemap": "^3.0.5",
-    "postcss": "^8.4.5",
+    "next-sitemap": "^4.0.6",
+    "postcss": "^8.4.21",
     "prettier": "^2.5.1",
-    "tailwindcss": "^3.1.2",
-    "typescript": "4.5.5"
+    "tailwindcss": "^3.2.7",
+    "typescript": "^5.0.2"
   }
 }
